--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,11 @@ script:
    - lb config
    - sudo lb build
 
+deploy:
+   provider: releases
+   api_key: "GITHUB OAUTH TOKEN"
+   file: "sharpbang-buster-amd64.hybrid.iso"
+   skip_cleanup: true
+   on:
+      tags: true
+
