auto/config: fixed architectures version

--- a/buster/auto/config
+++ b/buster/auto/config
@@ -17,7 +17,8 @@ lb config noauto \
    --apt-recommends false \
    --apt-source-archives false \
    --apt-indices false \
-   --linux-flavours amd64 \
+   --architectures i386 \
+   --linux-flavours 686-pae \
    --distribution buster \
    --archive-areas "main contrib non-free" \
    --clean \
