--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,14 @@ script:
    - sudo lb clean --purge
    - lb config
    - travis_wait 30 sudo lb build
+   - sha512sum sharpbang-buster-*.hybrid.iso > sha512sum.amd64
 
 deploy:
    provider: releases
    api_key: "$GITHUB_TOKEN"
-   file: "sharpbang-buster-0.5.4-amd64.hybrid.iso"
+   file: 
+      - "sharpbang-buster-0.5.4-amd64.hybrid.iso"
+      - "sha512sum.amd64"
    skip_cleanup: true
    on:
       tags: true
