--- a/buster/auto/config
+++ b/buster/auto/config
@@ -7,13 +7,13 @@
 # which will be appended automatically.
 
 lb config noauto \
-   --image-name 'sharpbang-buster-10.2.0' \
+   --image-name 'sharpbang-buster-10.2.1' \
    --mirror-bootstrap https://cdn-aws.deb.debian.org/debian/ \
    --mirror-binary https://deb.debian.org/debian \
    --mirror-binary-security https://deb.debian.org/debian-security \
    --debootstrap-options "--include=apt-transport-https,ca-certificates,openssl" \
    --bootappend-live "boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London" \
-   --apt-recommends false \
+   --apt-recommends true \
    --apt-source-archives false \
    --apt-indices false \
    --distribution buster \
