--- a/buster/auto/config
+++ b/buster/auto/config
@@ -13,6 +13,7 @@ lb config noauto \
    --mirror-binary-security https://deb.debian.org/debian-security \
    --debootstrap-options "--include=apt-transport-https,ca-certificates,openssl" \
    --bootappend-live "boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London" \
+   --apt-pipeline '0' \
    --apt-recommends true \
    --apt-source-archives false \
    --apt-indices false \
