--- a/buster/auto/config
+++ b/buster/auto/config
@@ -11,14 +11,16 @@ lb config noauto \
    --mirror-bootstrap https://cdn-aws.deb.debian.org/debian/ \
    --mirror-binary https://deb.debian.org/debian \
    --mirror-binary-security https://deb.debian.org/debian-security \
-   --debootstrap-options "--include=apt-transport-https,ca-certificates,openssl" \
-   --bootappend-live "boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London" \
+   --debootstrap-options '--include=apt-transport-https,ca-certificates,openssl' \
+   --bootappend-live 'boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London' \
    --apt-pipeline '0' \
    --apt-recommends true \
    --apt-source-archives false \
    --apt-indices false \
-   --distribution buster \
-   --archive-areas "main contrib non-free" \
+   --architectues 'i386' \
+   --linux-flavours '686-pae 686' \
+   --distribution 'buster' \
+   --archive-areas 'main contrib non-free' \
    --clean \
    --debian-installer live \
    --debian-installer-gui true \
