--- a/buster/auto/config
+++ b/buster/auto/config
@@ -17,7 +17,7 @@ lb config noauto \
    --apt-recommends true \
    --apt-source-archives false \
    --apt-indices false \
-   --architectues 'i386' \
+   --architectures 'i386' \
    --linux-flavours '686-pae 686' \
    --distribution 'buster' \
    --archive-areas 'main contrib non-free' \
