Revert to amd64 configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ script:
    - cd buster
    - sudo lb clean --purge
    - lb config
-   - travis_wait 60 sudo lb build
-   - sha512sum sharpbang-buster-*.hybrid.iso > sha512sum.i386
+   - travis_wait 30 sudo lb build
+   - sha512sum sharpbang-buster-*.hybrid.iso > sha512sum.amd64
 
 deploy:
    provider: releases
    api_key: "$GITHUB_TOKEN"
    file: 
-      - "sharpbang-buster-10.2.3-i386.hybrid.iso"
-      - "sha512sum.i386"
+      - "sharpbang-buster-10.2.3-amd64.hybrid.iso"
+      - "sha512sum.amd64"
    skip_cleanup: true
    on:
       tags: true
