--- a/buster/auto/config
+++ b/buster/auto/config
@@ -16,6 +16,8 @@ lb config noauto \
    --apt-recommends true \
    --apt-source-archives false \
    --apt-indices false \
+   --architectures 'i386' \
+   --linux-flavours '686-pae 686' \
    --distribution 'buster' \
    --archive-areas 'main contrib non-free' \
    --clean \
