--- a/buster/auto/config
+++ b/buster/auto/config
@@ -15,6 +15,7 @@ lb config noauto \
    --bootappend-live 'boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London' \
    --apt-source-archives 'false' \
    --apt-indices 'false' \
+   --architecture 'i386' \
    --distribution 'buster' \
    --archive-areas 'main contrib non-free' \
    --clean \
