--- a/buster/auto/config
+++ b/buster/auto/config
@@ -7,26 +7,26 @@
 # which will be appended automatically.
 
 lb config noauto \
-   --image-name 'sharpbang-buster-10.3.4' \
-   --mirror-bootstrap 'https://deb.debian.org/debian' \
-   --mirror-binary 'https://deb.debian.org/debian' \
-   --mirror-binary-security 'https://deb.debian.org/debian-security' \
-   --debootstrap-options '--include=ca-certificates,openssl' \
-   --bootappend-live 'boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London' \
    --apt-source-archives 'false' \
    --apt-indices 'false' \
-   --distribution 'buster' \
    --archive-areas 'main contrib non-free' \
+   --architectures 'i386' \
+   --bootappend-live 'boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London' \
    --clean \
    --debian-installer 'live' \
-   --debian-installer-gui 'true' \
    --debian-installer-distribution 'buster' \
+   --distribution 'buster' \
    --firmware-binary 'true' \
    --firmware-chroot 'true' \
+   --image-name 'sharpbang-buster-10.3.4' \
    --iso-application 'SharpBang' \
    --iso-publisher 'SharpBang GNU/Linux' \
    --iso-volume 'SHARPBANG_BUSTER' \
-   --memtest 'memtest86+' \
+   --mirror-binary 'https://deb.debian.org/debian' \
+   --mirror-binary-security 'https://deb.debian.org/debian-security' \
+   --mirror-bootstrap 'https://deb.debian.org/debian' \
+   --quiet \
    --security 'true' \
+   --system 'live' \
    --updates 'true' \
    "${@}"
