--- a/buster/config/bootloaders/isolinux/menu.cfg
+++ b/buster/config/bootloaders/isolinux/menu.cfg
@@ -5,23 +5,30 @@ include stdmenu.cfg
 include live.cfg
 
 label live-toram
-    menu label ^Live system (load image to RAM)
-    linux /live/vmlinuz
-    initrd /live/initrd.img
-    append boot=live components quiet splash toram
+   menu label ^Live system (load image to RAM)
+   linux /live/vmlinuz
+   initrd /live/initrd.img
+   append boot=live components quiet splash toram
+
+menu begin local
+   menu title ^Live with localisation support
+   include stdmenu.cfg
+   label mainmenu
+      menu label ^Back..
+      menu exit
+   include local.cfg
+menu end
 
 include install.cfg
 
-menu begin Advanced
-menu label ^Advanced options
-menu title Advanced boot options
- 
-include advanced.cfg
+menu begin advanced
+   menu title ^Advanced options
+   include stdmenu.cfg
+   label mainmenu
+      menu label ^Back..
+      menu exit
+   include advanced.cfg
+menu end
 
-label back-to-main
-  menu label ^Back to main menu
-  menu exit
-
-menu end 
   
 menu clear
