--- a/buster/auto/config
+++ b/buster/auto/config
@@ -10,6 +10,7 @@ lb config noauto \
    --apt-source-archives 'false' \
    --apt-indices 'false' \
    --archive-areas 'main contrib non-free' \
+   --architectures 'i386' \
    --bootappend-live 'boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London' \
    --clean \
    --debian-installer 'live' \
