--- a/buster/config/includes.chroot/root/.config/fontconfig/fonts.conf
+++ b/buster/config/includes.chroot/root/.config/fontconfig/fonts.conf
@@ -4,14 +4,14 @@
 <!-- Set preferred serif, sans serif, and monospace fonts. -->
    <alias>
       <family>serif</family>
-      <prefer><family>Liberation Serif</family></prefer>
+      <prefer><family>Times New Roman</family></prefer>
    </alias>
    <alias>
       <family>sans-serif</family>
-      <prefer><family>Liberation Sans</family></prefer>
+      <prefer><family>Arial</family></prefer>
    </alias>
    <alias>
       <family>monospace</family>
-      <prefer><family>Liberation Mono</family></prefer>
+      <prefer><family>Inconsolata</family></prefer>
    </alias>
 </fontconfig>
