--- a/buster/auto/config
+++ b/buster/auto/config
@@ -9,6 +9,7 @@
 lb config noauto \
    --apt-source-archives 'false' \
    --apt-indices 'false' \
+   --architectures 'i386' \
    --archive-areas 'main contrib non-free' \
    --bootappend-live 'boot=live components locales=en_GB.UTF-8 keyboard-layouts=gb timezone=Europe/London' \
    --clean \
