--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ deploy:
    provider: releases
    api_key: "$GITHUB_TOKEN"
    file: 
-      - "sharpbang-buster-backports-20200726-amd64.hybrid.iso"
+      - "sharpbang-buster-backports-10.5.0-amd64.hybrid.iso"
       - "sha512sum.amd64"
    skip_cleanup: true
    on:
