--- a/buster/auto/config
+++ b/buster/auto/config
@@ -16,7 +16,7 @@ lb config noauto \
    --debian-installer 'live' \
    --debian-installer-distribution 'buster' \
    --distribution 'buster' \
-   --image-name 'sharpbang-buster-backports-20200726' \
+   --image-name 'sharpbang-buster-backports-10.5.0' \
    --iso-application 'SharpBang' \
    --iso-publisher 'SharpBang GNU/Linux' \
    --iso-volume 'SHARPBANG_BUSTER_BACKPORTS' \
