--- a/buster/config/includes.installer/preseed.cfg
+++ b/buster/config/includes.installer/preseed.cfg
@@ -9,3 +9,4 @@ d-i apt-setup/non-free boolean true
 d-i apt-setup/contrib boolean true
 d-i apt-setup/enable-source-repositories false
 d-i apt-setup/disable-cdrom-entries boolean true
+d-i preseed/late_command string in-target sed -e '/deb-src/s/^/#/' -e '$adeb https://deb.debian.org/debian buster-backports main' -i /etc/apt/sources.list
