.travis.yml: fifth attempt

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ services: docker
 before_install:
   - docker pull debian
   - docker run debian /bin/sh -c "apt update && apt install -y live-build"
-  - docker cp buster debian:/buster
-  - docker run debian /bin/sh -c "cd /buster && lb build"
-  - docker cp debian:/buster/sharpbang-buster-10.10.0-amd64.hybrid.iso debian:/buster/sha512sum.amd64 /
+  - docker run debian /bin/sh -c "mkdir /iso"
+  - docker cp buster debian:/iso/
+  - docker run debian /bin/sh -c "cd /iso/buster && lb build"
+  - docker cp debian:/iso/buster/sharpbang-buster-10.10.0-amd64.hybrid.iso /iso/debian:/buster/sha512sum.amd64 /
 
 script: lb build
 
