.travis.yml: try full path

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services: docker
 before_install:
   - docker pull debian:stable-slim
   - docker run debian:stable-slim /bin/sh -c "apt update && apt install -y live-build git"
-  - docker run debian:stable-slim /bin/sh -c "git clone https://github.com/head-on-a-stick/sharpbang"
-  - docker run debian:stable-slim /bin/sh -c "cd sharpbang/buster && lb build"
+  - docker run debian:stable-slim /bin/sh -c "/usr/bin/git clone https://github.com/head-on-a-stick/sharpbang"
+  - docker run debian:stable-slim /bin/sh -c "cd sharpbang/buster && /usr/bin/lb build"
   - docker cp debian:sharpbang/buster/sharpbang-buster-10.10.0-amd64.hybrid.iso debian:sharpbang/buster/sha512sum.amd64 /
 
 script: lb build
